<resources>

    <!-- Widget -->
    <string name="app_name">ZruvanWidget</string>
    <string name="no_date">----/--/--（--）</string>
    <string name="no_time">--:--</string>
    <string name="no_battery">---%</string>
    <string name="no_data">----</string>
    <string name="battery_img_desc">battery</string>
    <string name="wifi_label">Wi-Fi SSID ： </string>
    <string name="gps_label">GPS PROVIDER ： </string>
    <string name="version_label">OS VERSION ： </string>
    <string name="version_text">%2$s（API %1$d）</string>
    
    <!-- Configure -->
    <string name="configure_title">@string/app_name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string-array name="color_list">
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Purple</item>
        <item>Brown</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Gray</item>
    </string-array>
    
</resources>
