<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/no_date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateText"
        android:layout_centerHorizontal="true"
        android:text="@string/no_time"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/timeText"
        android:layout_centerHorizontal="true"
        android:background="#FF808080" />

    <ImageView
        android:id="@+id/batteryImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:contentDescription="@string/battery_img_desc"
        android:src="@drawable/battery_0" />

    <TextView
        android:id="@+id/batteryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/batteryImage"
        android:text="@string/no_battery"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/batteryImage"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/batteryText" >

        <TextView
            android:id="@+id/wifiLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wifiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/linearLayout1" >

        <TextView
            android:id="@+id/gpsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/gpsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>